# career_center

./: .gitignore  ARCHITECTURE_DIAGRAM.md  HOW_TO_RUN.md  LICENSE  README.md  SKILLS.md  WALKTHROUGH.md  app.py  orchestrator.py  pyproject.toml  requirements.txt  reset.py
.claude/: _scoring_rules.md  settings.json
.claude/_archive/: fetchjobs-pro__wave-3-backfill.md  improve__1-8-idempotency-dedup-against-improve-log.md  improve__5-5-auto-orchestration-autonomous-mode.md  improve__5-apply-approved-changes-interactive-mode-only.md
.claude/commands/: fetchjobs-pro.md  fetchjobs.md  improve.md  setup.md
.cursor/rules/: jobsearch.mdc  reset.mdc  setup_from_resume.mdc
.cursor/skills/discover-linkedin-jobs/: SKILL.md
.cursor/skills/evaluate-nudge-and-wisdom/: SKILL.md
.cursor/skills/godmode-improve/: SKILL.md
.cursor/skills/leverage-feedback-and-weights/: SKILL.md
scripts/: audit_feedback_efficacy.py  audit_run_efficiency.py  dump_judge_context.py  evaluate_nudge_system.py  feedback.py  get_nudge_context.py  revalidate_existing_jobs.py  run_fetchjobs.py  skill_cache.py  snapshot_history.py  synthesize_feedback_patterns.py
src/job_finder/: __init__.py  candidate_disk_sync.py  config.py  exclusions.py  history.py  improve_changes.py  judge_context.py  link_validation.py  paths.py  persistence.py  session_marker.py  ui_app.py  ui_data.py  ui_helpers.py  ui_job_board.py  ui_profile_editor.py  wisdom.py  wisdom_intel.py
tests/: test_audit_regression_detector.py  test_improve_changes_archive.py  test_link_validation_dead_pages.py
(+1 files in other folders)
